--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,15 @@
   "description": "Barber Shop where user can select the convinient service and seller can provide variety of service.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./server.js",
+    "dev": "nodemon ./server.js"
   },
   "author": "vk",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
