too many updates

--- a/server/config.env
+++ b/server/config.env
@@ -1,3 +1,8 @@
 
 RZP_KEY_ID = 'rzp_test_w1Ms004Eeo6Y4L'
 RZP_KEY_SECRET = 'uOFRC56HGAhofl1HlQlyqiQE'
+
+JWT_SECRET = "hellopeter"
+JWT_EXPIRE="24h"
+
+COOKIE_EXPIRE = "24"
