--- a/server/config.env
+++ b/server/config.env
@@ -5,4 +5,5 @@ RZP_KEY_SECRET = 'uOFRC56HGAhofl1HlQlyqiQE'
 JWT_SECRET = "hellopeter"
 JWT_EXPIRE="24h"
 
+CLOUD_KEY = "dbnfqugzv"
 COOKIE_EXPIRE = "24"
