--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^2.17.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@mui/lab": "^5.0.0-alpha.156",
     "@mui/x-date-pickers": "^6.18.5",
     "@reduxjs/toolkit": "^1.9.5",
